<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".clerk_monthlyCheck">

    <TextView
        android:id="@+id/requisitionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0b55a2"
        android:fontFamily="serif"
        android:text="@string/requiList"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="45sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:id="@+id/table_requisition"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:id="@+id/table_row3"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/req"
                        android:fontFamily="serif"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textColor="#000000"
                        android:text="@string/reqId"/>
                    <TextView
                        android:id="@+id/requestBy"
                        android:textColor="#000000"
                        android:fontFamily="serif"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:text="@string/emp_name"/>
                    <TextView
                        android:id="@+id/submit_date"
                        android:textColor="#000000"
                        android:fontFamily="serif"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:text="@string/submit_date"/>
                    <TextView
                        android:id="@+id/status"
                        android:textColor="#000000"
                        android:fontFamily="serif"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:text="@string/status"/>
                </TableRow>
                <View
                    android:id="@+id/line2"
                    android:layout_height="3dp"
                    android:layout_width="match_parent"
                    android:background="#ff0000"/>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>