<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dep_delegateToEmployee">

    <TextView
        android:id="@+id/allocate"
        android:layout_width="wrap_content"
        android:layout_height="107dp"
        android:text="@string/allocateAuthority"
        android:textSize="28dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start Date"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/sDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="dd-mm-yyyy"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="End Date"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/eDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="dd-mm-yyyy"
            android:textSize="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="166dp">

        <TextView
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/spinner2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarSize="30sp" />
    </LinearLayout>

    <Button

        android:id="@+id/SubmitButton"
        android:layout_width="152dp"
        android:layout_height="111dp"
        android:layout_gravity="center"
        android:background="#009bf4"
        android:text="@string/delegate2" />
</LinearLayout>